--- a/index.html
+++ b/index.html
@@ -513,8 +513,9 @@
              
         <!--WhastaApp Flutuante -->
         <div class="whatsFlutante">
-            <a href="https://api.whatsapp.com/send?phone=5531992239776"></a>
-            <img src="Imagens/whatsappicon.png">
+            <a href="https://api.whatsapp.com/send?phone=5531992239776">
+                <img src="Imagens/whatsappicon.png">
+            </a>            
         </div>
 
 
