--- a/index.html
+++ b/index.html
@@ -513,7 +513,7 @@
              
         <!--WhastaApp Flutuante -->
         <div class="whatsFlutante">
-            <a href="https://api.whatsapp.com/send?phone=5531992239776">
+            <a href="https://api.whatsapp.com/send?phone=5531992239776&text=Oi,%20gostaria%20de%20deixar%20um%20feedback%20do%20seu%20projeto%20:D%0D%0D%0D">
                 <img src="Imagens/whatsappicon.png">
             </a>            
         </div>
